src/test/deca/syntax/invalid/class_obj_04.deca
// Description:
//    Programme testant l'instanciation d'un objet;
//
// Resultats:
//      Erreur
//
//
// Historique:
//    cree le 16/01/2023

class A {
    int x(int j) {
	}
}
{
	int i;
	A else = new A();
}